--- a/web/120621 musicplayer.html
+++ b/web/120621 musicplayer.html
@@ -10,178 +10,186 @@ Stock images: https://unsplash.com/s/photos/power
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music player</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <div class="phone">
-            <div class="header">
-                <div class="icon-menu"></div>
-                <div class="icon-search"></div>
-            </div>
-            <div class="content">
-                <div class="discs">
-                    <div style="--index: 3" class="disc">
-                        <div style="--color: #185ADC" class="disc-bg">
-                            <img src="https://images.unsplash.com/photo-1519834785169-98be25ec3f84?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
-                                alt="" class="disc-img">
-                        </div>
-                        <div class="disc-text">
-                            <h2 class="artist">Moby</h2>
-                            <h3 class="song">Reprise</h3>
-                        </div>
-                    </div>
-                    <div style="--index: 2; --color: #FFC947" class="disc">
-                        <div class="disc-bg">
-                            <img src="https://images.unsplash.com/photo-1571845332747-09403710f8ab?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80"
-                                alt="" class="disc-img">
-                        </div>
-                        <div class="disc-text">
-                            <h2 class="artist">Twenty one pilots</h2>
-                            <h3 class="song">Scaled and</h3>
-                        </div>
-                    </div>
-                    <div style="--index: 1; --color: #FE97AC" class="disc">
-                        <div class="disc-bg">
-                            <img src="https://images.unsplash.com/photo-1478515463067-d20f52aace26?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
-                                alt="" class="disc-img">
-                        </div>
-                        <div class="disc-text">
-                            <h2 class="artist">Foo</h2>
-                            <h3 class="song">Bar</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="phone">
+        <div class="header">
+          <div class="icon-menu"></div>
+          <div class="icon-search"></div>
         </div>
-        <div class="phone">
-            <div class="header">
-                <div class="icon-menu"></div>
-                <div class="icon-search"></div>
+        <div class="content">
+          <div class="discs">
+            <div style="--index: 3" class="disc">
+              <div style="--color: #185ADC" class="disc-bg">
+                <img
+                  src="https://images.unsplash.com/photo-1519834785169-98be25ec3f84?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
+                  alt=""
+                  class="disc-img"
+                />
+              </div>
+              <div class="disc-text">
+                <h2 class="artist">Moby</h2>
+                <h3 class="song">Reprise</h3>
+              </div>
             </div>
-            <div class="content">
-                <div class="disc-info" style="--color: #185ADC">
-                    <div style="--index: 3" class="disc">
-                        <div class="disc-content">
-                            <div class="disc-wrapper">
-                                <img src="https://images.unsplash.com/photo-1519834785169-98be25ec3f84?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
-                                    alt="" class="disc-img">
-                            </div>
-                            <div class="disc-text">
-                                <h2 class="artist">Moby</h2>
-                                <h3 class="song">Reprise</h3>
-                            </div>
-                            <div class="tracklist">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div style="--index: 2; --color: #FFC947" class="disc">
+              <div class="disc-bg">
+                <img
+                  src="https://images.unsplash.com/photo-1571845332747-09403710f8ab?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=753&q=80"
+                  alt=""
+                  class="disc-img"
+                />
+              </div>
+              <div class="disc-text">
+                <h2 class="artist">Twenty one pilots</h2>
+                <h3 class="song">Scaled and</h3>
+              </div>
             </div>
+            <div style="--index: 1; --color: #FE97AC" class="disc">
+              <div class="disc-bg">
+                <img
+                  src="https://images.unsplash.com/photo-1478515463067-d20f52aace26?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
+                  alt=""
+                  class="disc-img"
+                />
+              </div>
+              <div class="disc-text">
+                <h2 class="artist">Foo</h2>
+                <h3 class="song">Bar</h3>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <div class="phone">
+        <div class="header">
+          <div class="icon-menu"></div>
+          <div class="icon-search"></div>
+        </div>
+        <div class="content">
+          <div class="disc-info" style="--color: #185ADC">
+            <div style="--index: 3" class="disc">
+              <div class="disc-content">
+                <div class="disc-wrapper">
+                  <img
+                    src="https://images.unsplash.com/photo-1519834785169-98be25ec3f84?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80"
+                    alt=""
+                    class="disc-img"
+                  />
+                </div>
+                <div class="disc-text">
+                  <h2 class="artist">Moby</h2>
+                  <h3 class="song">Reprise</h3>
+                </div>
+                <div class="tracklist"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <style>
-        * {
-            box-sizing: border-box;
-        }
+      * {
+        box-sizing: border-box;
+      }
 
-        body {
-            margin: 0px;
-            padding: 0px;
-            background-color: #F6E6CB;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
+      body {
+        margin: 0px;
+        padding: 0px;
+        background-color: #f6e6cb;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      }
 
-        .wrapper {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            gap: 100px
-        }
+      .wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        gap: 100px;
+      }
 
-        .phone {
-            /* transform: scale(20%); */
-            width: 1080px;
-            height: 2220px;
-            background-color: black;
-            border-radius: 80px;
-            overflow: hidden;
-        }
+      .phone {
+        /* transform: scale(20%); */
+        width: 1080px;
+        height: 2220px;
+        background-color: black;
+        border-radius: 80px;
+        overflow: hidden;
+      }
 
-        .header {
-            height: 140px;
-            /* background-color: red; */
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            padding: 40px;
-        }
+      .header {
+        height: 140px;
+        /* background-color: red; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 40px;
+      }
 
-        .header>*,
-        .disc-img>* {
-            border-radius: 100px;
-            background-color: white;
-            height: 90px;
-            width: 90px;
-        }
+      .header > *,
+      .disc-img > * {
+        border-radius: 100px;
+        background-color: white;
+        height: 90px;
+        width: 90px;
+      }
 
-        .disc {
-            height: 750px;
-            z-index: var(--index);
-            position: relative;
-        }
+      .disc {
+        height: 750px;
+        z-index: var(--index);
+        position: relative;
+      }
 
-        .disc-text {
-            color: white;
-            position: relative;
-            top: -400px;
-            padding: 3em;
-        }
+      .disc-text {
+        color: white;
+        position: relative;
+        top: -400px;
+        padding: 3em;
+      }
 
-        .disc-text .artist {
-            font-size: 4em;
-            margin: 0px;
-            font-weight: 100;
-            line-height: 1;
-        }
+      .disc-text .artist {
+        font-size: 4em;
+        margin: 0px;
+        font-weight: 100;
+        line-height: 1;
+      }
 
-        .disc-text .song {
-            line-height: 1;
-            font-size: 14em;
-            margin: 0px;
-            font-weight: 400;
-        }
+      .disc-text .song {
+        line-height: 1;
+        font-size: 14em;
+        margin: 0px;
+        font-weight: 400;
+      }
 
-        .disc-bg {
-            background-color: var(--color);
-            width: 1000px;
-            height: 1000px;
-            border-radius: 20000px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-left: auto;
-            margin-right: auto;
-        }
+      .disc-bg {
+        background-color: var(--color);
+        width: 1000px;
+        height: 1000px;
+        border-radius: 20000px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
-        .disc-img {
-            width: 40%;
-            height: 40%;
-            border-radius: 20000px;
-            object-fit: cover;
-        }
-
+      .disc-img {
+        width: 40%;
+        height: 40%;
+        border-radius: 20000px;
+        object-fit: cover;
+      }
     </style>
-</body>
-
+  </body>
 </html>
