--- a/web/index.html
+++ b/web/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
+  <!--
 A basic html template used for loading javascript/typescript files
 used for any js/ts practice sessions by swapping out the script `src`
 -->
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ts template</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script src="framework.js"></script>
-</body>
-
+  </body>
 </html>
