--- a/web/130621 musicplayer.html
+++ b/web/130621 musicplayer.html
@@ -10,234 +10,240 @@ Stock images: https://unsplash.com/s/photos/music
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music player</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
-        integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
+      integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </head>
 
-<body>
-
+  <body>
     <div class="wrapper">
-        <div class="phone">
-            <div class="header">
-                <i class="fa fa-align-left"></i>
-                <i class="fa fa-search"></i>
-            </div>
-            <div class="discs">
-                <div class="disc" style="--color: #185ADC">
-                    <div class="disc-outer">
-                        <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80"
-                            alt="">
-                    </div>
-                    <div class="player-head">
-                        <h2>Moby</h2>
-                        <h3>Reprise</h3>
-                    </div>
-                </div>
-            </div>
-
+      <div class="phone">
+        <div class="header">
+          <i class="fa fa-align-left"></i>
+          <i class="fa fa-search"></i>
         </div>
-        <div class="phone">
-            <div class="header">
-                <i class="fa fa-angle-left"></i>
-                <i class="fa fa-search"></i>
+        <div class="discs">
+          <div class="disc" style="--color: #185ADC">
+            <div class="disc-outer">
+              <img
+                src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80"
+                alt=""
+              />
             </div>
-            <div class="player" style="--color: #185ADC">
-                <div class="disc-wrapper">
-                    <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80"
-                        alt="">
-                </div>
-                <div class="player-head">
-                    <h2>Moby</h2>
-                    <h3>Reprise</h3>
-                </div>
-                <ul class="tracklist">
-                    <li>
-                        <div class="track-left">
-                            <h4>Everloving (Reprise Version)</h4>
-                            <small>3:20</small>
-                        </div>
-                        <div class="track-right">
-                            <i class="fa fa-play"></i>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="track-left">
-                            <h4>Everloving (Reprise Version)</h4>
-                            <small>3:20</small>
-                        </div>
-                        <div class="track-right">
-                            <i class="fa fa-play"></i>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="track-left">
-                            <h4>Everloving (Reprise Version)</h4>
-                            <small>3:20</small>
-                        </div>
-                        <div class="track-right">
-                            <i class="fa fa-play"></i>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="track-left">
-                            <h4>Everloving (Reprise Version)</h4>
-                            <small>3:20</small>
-                        </div>
-                        <div class="track-right">
-                            <i class="fa fa-play"></i>
-                        </div>
-                    </li>
-                </ul>
+            <div class="player-head">
+              <h2>Moby</h2>
+              <h3>Reprise</h3>
             </div>
-
+          </div>
         </div>
+      </div>
+      <div class="phone">
+        <div class="header">
+          <i class="fa fa-angle-left"></i>
+          <i class="fa fa-search"></i>
+        </div>
+        <div class="player" style="--color: #185ADC">
+          <div class="disc-wrapper">
+            <img
+              src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=334&q=80"
+              alt=""
+            />
+          </div>
+          <div class="player-head">
+            <h2>Moby</h2>
+            <h3>Reprise</h3>
+          </div>
+          <ul class="tracklist">
+            <li>
+              <div class="track-left">
+                <h4>Everloving (Reprise Version)</h4>
+                <small>3:20</small>
+              </div>
+              <div class="track-right">
+                <i class="fa fa-play"></i>
+              </div>
+            </li>
+            <li>
+              <div class="track-left">
+                <h4>Everloving (Reprise Version)</h4>
+                <small>3:20</small>
+              </div>
+              <div class="track-right">
+                <i class="fa fa-play"></i>
+              </div>
+            </li>
+            <li>
+              <div class="track-left">
+                <h4>Everloving (Reprise Version)</h4>
+                <small>3:20</small>
+              </div>
+              <div class="track-right">
+                <i class="fa fa-play"></i>
+              </div>
+            </li>
+            <li>
+              <div class="track-left">
+                <h4>Everloving (Reprise Version)</h4>
+                <small>3:20</small>
+              </div>
+              <div class="track-right">
+                <i class="fa fa-play"></i>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <style>
-        * {
-            box-sizing: border-box;
-        }
+      * {
+        box-sizing: border-box;
+      }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            margin: 0px;
-            background-color: #F6E6CB;
-        }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 0px;
+        background-color: #f6e6cb;
+      }
 
-        .wrapper {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            gap: 220px;
-        }
+      .wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        gap: 220px;
+      }
 
-        .phone:nth-child(2) {
-            position: relative;
-            top: 100px;
-        }
+      .phone:nth-child(2) {
+        position: relative;
+        top: 100px;
+      }
 
-        .phone {
-            width: 1080px;
-            height: 2200px;
-            background-color: black;
-            border-radius: 120px;
-            color: white;
-            overflow: hidden;
-        }
+      .phone {
+        width: 1080px;
+        height: 2200px;
+        background-color: black;
+        border-radius: 120px;
+        color: white;
+        overflow: hidden;
+      }
 
-        .header {
-            height: 120px;
-            /* background-color: red; */
-            color: white;
-            font-size: 4em;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1.2em;
-            margin-bottom: 1em;
-        }
+      .header {
+        height: 120px;
+        /* background-color: red; */
+        color: white;
+        font-size: 4em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1.2em;
+        margin-bottom: 1em;
+      }
 
-        .player {
-            background-color: var(--color);
-            border-radius: 90px;
-            height: 100%;
-            position: relative;
-        }
+      .player {
+        background-color: var(--color);
+        border-radius: 90px;
+        height: 100%;
+        position: relative;
+      }
 
-        .disc-wrapper {
-            height: 800px;
-            /* background-color: red; */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+      .disc-wrapper {
+        height: 800px;
+        /* background-color: red; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-        .disc-wrapper img {
-            object-fit: cover;
-            height: 700px;
-            width: 700px;
-            border-radius: 500px;
-        }
+      .disc-wrapper img {
+        object-fit: cover;
+        height: 700px;
+        width: 700px;
+        border-radius: 500px;
+      }
 
-        .player-head {
-            position: absolute;
-            margin: 0px 6em;
-            top: 540px;
-        }
+      .player-head {
+        position: absolute;
+        margin: 0px 6em;
+        top: 540px;
+      }
 
-        .player-head h2 {
-            margin: 0px;
-            line-height: 1;
-            font-size: 4em;
-            font-weight: 200;
-        }
+      .player-head h2 {
+        margin: 0px;
+        line-height: 1;
+        font-size: 4em;
+        font-weight: 200;
+      }
 
-        .player-head h3 {
-            margin: 0px;
-            line-height: 1;
-            font-size: 12em;
-            font-weight: 400;
-        }
+      .player-head h3 {
+        margin: 0px;
+        line-height: 1;
+        font-size: 12em;
+        font-weight: 400;
+      }
 
-        .tracklist {
-            margin: 0px 6em;
-            margin-top: 40px;
-            list-style-type: none;
-        }
+      .tracklist {
+        margin: 0px 6em;
+        margin-top: 40px;
+        list-style-type: none;
+      }
 
-        .tracklist li {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 40px 0px;
-        }
+      .tracklist li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 0px;
+      }
 
-        .tracklist h4 {
-            font-size: 3em;
-            font-weight: 200;
-            margin: 0px;
-            opacity: .9;
-        }
+      .tracklist h4 {
+        font-size: 3em;
+        font-weight: 200;
+        margin: 0px;
+        opacity: 0.9;
+      }
 
-        .tracklist small {
-            font-size: 2em;
-            font-weight: 300;
-            opacity: .6;
-        }
+      .tracklist small {
+        font-size: 2em;
+        font-weight: 300;
+        opacity: 0.6;
+      }
 
-        .tracklist .track-right {
-            font-size: 3em;
-        }
+      .tracklist .track-right {
+        font-size: 3em;
+      }
 
-        .disc-outer {
-            height: 900px;
-            width: 900px;
-            background-color: var(--color);
-            border-radius: 900px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-left: auto;
-            margin-right: auto;
-        }
+      .disc-outer {
+        height: 900px;
+        width: 900px;
+        background-color: var(--color);
+        border-radius: 900px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
-        .disc-outer img {
-            border-radius: 400px;
-            width: 40%;
-            height: 40%;
-        }
-
+      .disc-outer img {
+        border-radius: 400px;
+        width: 40%;
+        height: 40%;
+      }
     </style>
-</body>
-
+  </body>
 </html>
